# lizard-market

.claude-plugin/: marketplace.json
plugins/agent-browser/.claude-plugin/: plugin.json
plugins/agent-browser/skills/: advanced-usage.md
plugins/discord-remote/: .gitignore  .mcp.json  README.md  package.json  server.ts  tsconfig.json
plugins/discord-remote/.claude-plugin/: plugin.json
plugins/discord-remote/hooks/: hook.mjs  hooks.json
plugins/discord-remote/src/: config.ts  deny-patterns.ts  discord-approver.ts  sidecar.ts  types.ts
plugins/discord-remote/tests/: config.test.ts  deny-patterns.test.ts  discord-approver.test.ts  hook.test.mjs  sidecar.test.ts
plugins/kratos/: .gitignore  .golangci.yml  CLAUDE.md  INSTALL.md  PHASE4-SUMMARY.md  README.md  README.zh-TW.md
plugins/kratos/.claude-plugin/: plugin.json
plugins/kratos/.github/: CI.md
plugins/kratos/agents/: ananke.md  apollo.md  ares.md  artemis.md  athena.md  cassandra.md  clio.md  daedalus.md  hades.md  hephaestus.md  hera.md  hermes.md  metis.md  mimir.md  prometheus.md  themis.md
plugins/kratos/commands/: approve.md  audit.md  check-arena-staleness.md  clean-insights.md  decompose.md  explain.md  inquiry.md  install-hooks.md  main.md  next.md  plan.md  quick.md  recall.md  review.md  start.md  status.md  task-complete.md
plugins/kratos/docs/: user-guide.md
plugins/kratos/go/: Makefile  README.md  TEST_IMPLEMENTATION_SUMMARY.md  go.mod  (+1 more)
plugins/kratos/memory/: Cargo.toml  README.md  kratos_memory.py  schema.sql
plugins/kratos/memory/src/: main.rs
plugins/linus-droid/: README.md
(+111 files in other folders)
