[package]
name = "kratos-memory"
version = "1.0.0"
edition = "2021"
description = "Fast SQLite memory system for Kratos agent orchestrator"
authors = ["Kratos Plugin"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "kratos-memory"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
